@@ -21,7 +21,6 @@ import java.nio.ByteBuffer;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
 
-import com.google.common.base.Function;
 import com.google.common.collect.Iterables;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -34,8 +33,6 @@ import org.apache.cassandra.cql3.*;
 import org.apache.cassandra.db.*;
 import org.apache.cassandra.db.partitions.PartitionUpdate;
 import org.apache.cassandra.db.rows.RowIterator;
-import org.apache.cassandra.dht.Range;
-import org.apache.cassandra.dht.Token;
 import org.apache.cassandra.exceptions.*;
 import org.apache.cassandra.service.*;
 import org.apache.cassandra.tracing.Tracing;
@@ -71,7 +68,7 @@ public class BatchStatement implements CQLStatement
     private final boolean hasConditions;
     private static final Logger logger = LoggerFactory.getLogger(BatchStatement.class);
 
-    private static final String UNLOGGED_BATCH_WARNING = "Unlogged batch covering {} partition{} detected " +
+    private static final String UNLOGGED_BATCH_WARNING = "Unlogged batch covering {} partitions detected " +
                                                          "against table{} {}. You should use a logged batch for " +
                                                          "atomicity, or asynchronous writes for performance.";
 
@@ -313,45 +310,29 @@ public class BatchStatement implements CQLStatement
             Set<DecoratedKey> keySet = new HashSet<>();
             Set<String> tableNames = new HashSet<>();
 
-            Map<String, Collection<Range<Token>>> localTokensByKs = new HashMap<>();
-            boolean localPartitionsOnly = true;
             for (IMutation mutation : mutations)
             {
                 for (PartitionUpdate update : mutation.getPartitionUpdates())
                 {
                     keySet.add(update.partitionKey());
+
                     tableNames.add(String.format("%s.%s", update.metadata().ksName, update.metadata().cfName));
                 }
-
-                if (localPartitionsOnly)
-                    localPartitionsOnly &= isPartitionLocal(localTokensByKs, mutation);
             }
 
-            // CASSANDRA-9303: If we only have local mutations we do not warn
-            if (localPartitionsOnly)
-                return;
+            // CASSANDRA-11529: log only if we have more than a threshold of keys, this was also suggested in the
+            // original ticket that introduced this warning, CASSANDRA-9282
+            if (keySet.size() > DatabaseDescriptor.getUnloggedBatchAcrossPartitionsWarnThreshold())
+            {
+                NoSpamLogger.log(logger, NoSpamLogger.Level.WARN, 1, TimeUnit.MINUTES, UNLOGGED_BATCH_WARNING,
+                                 keySet.size(), tableNames.size() == 1 ? "" : "s", tableNames);
 
-            NoSpamLogger.log(logger, NoSpamLogger.Level.WARN, 1, TimeUnit.MINUTES, UNLOGGED_BATCH_WARNING,
-                             keySet.size(), keySet.size() == 1 ? "" : "s",
-                             tableNames.size() == 1 ? "" : "s", tableNames);
-
-            ClientWarn.instance.warn(MessageFormatter.arrayFormat(UNLOGGED_BATCH_WARNING, new Object[]{keySet.size(), keySet.size() == 1 ? "" : "s",
+                ClientWarn.instance.warn(MessageFormatter.arrayFormat(UNLOGGED_BATCH_WARNING, new Object[]{keySet.size(),
                                                     tableNames.size() == 1 ? "" : "s", tableNames}).getMessage());
+            }
         }
     }
 
-    private boolean isPartitionLocal(Map<String, Collection<Range<Token>>> localTokensByKs, IMutation mutation)
-    {
-        String ksName = mutation.getKeyspaceName();
-        Collection<Range<Token>> localRanges = localTokensByKs.get(ksName);
-        if (localRanges == null)
-        {
-            localRanges = StorageService.instance.getLocalRanges(ksName);
-            localTokensByKs.put(ksName, localRanges);
-        }
-
-        return Range.isInRanges(mutation.key().getToken(), localRanges);
-    }
 
     public ResultMessage execute(QueryState queryState, QueryOptions options) throws RequestExecutionException, RequestValidationException
     {
